fix : jwt userDTO